feat: split KFFI from wgpu4k-native (#2)